<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <include layout="@layout/layout_collapsing_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                style="@style/ItemListName"
                android:text="@string/text_owner" />

            <include layout="@layout/layout_generic_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/tvFollowersCount"
                    android:layout_marginStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/ItemListName"
                    android:text="@string/text_owner_followers" />

                <TextView
                    android:id="@+id/tvFollowersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    style="@style/ItemListName"
                    android:text="@string/text_owner_followers_count" />

            </RelativeLayout>

            <include layout="@layout/layout_generic_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/tvFollowingCount"
                    android:layout_marginStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/ItemListName"
                    android:text="@string/text_owner_following" />

                <TextView
                    android:id="@+id/tvFollowingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    style="@style/ItemListName"
                    android:text="@string/text_owner_following_count"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <include layout="@layout/layout_generic_divider" />

            <Button
                android:id="@+id/btnViewInGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_light"
                style="?selectableItemBackgroundBorderless"
                android:text="@string/text_owner_view_in_github"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>